--- a/package.json
+++ b/package.json
@@ -1,41 +1,23 @@
 {
-  "name": "server",
+  "name": "lec4",
   "version": "1.0.0",
   "description": "",
   "type": "module",
   "main": "dist/index.js",
   "scripts": {
     "tsw": "tsc -w",
-    "dev": "nodemon src/index.ts",
-    "start": "node src/index.ts",
+    "dev": "nodemon ./dist/index.js",
+    "start": "node ./dist/index.js",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "keywords": [],
   "author": "",
   "license": "ISC",
   "dependencies": {
-    "@types/bcryptjs": "^2.4.2",
-    "@types/cors": "^2.8.13",
-    "@types/express": "^4.17.17",
-    "@types/jsonwebtoken": "^9.0.1",
-    "@types/underscore": "^1.11.4",
-    "bcryptjs": "^2.4.3",
-    "cors": "^2.8.5",
-    "dotenv": "^16.3.1",
+    "@types/express": "^4.17.16",
+    "chalk": "^5.2.0",
     "express": "^4.18.2",
-    "express-session": "^1.17.3",
-    "joi": "^17.9.1",
-    "jsonwebtoken": "^9.0.0",
-    "mongoose": "^7.3.1",
-    "morgan": "^1.10.0",
-    "nodemon": "^2.0.22",
-    "ts-node": "^10.9.1",
-    "underscore": "^1.13.6"
-  },
-  "devDependencies": {
-    "typescript": "^4.5.2"
-  },
-  "engines": {
-    "node": ">=14.20.1"
+    "mongoose": "^6.9.0",
+    "morgan": "^1.10.0"
   }
 }
